objects/Purchase_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Available_Date__c</fullName>
        <description>FF to the parent Purchase_Order.Available_Date__c</description>
        <formula>Purchase_Order__r.Available_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The available date of the purchase order</inlineHelpText>
        <label>Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item #</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Items</relationshipLabel>
        <relationshipName>Purchase_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <inlineHelpText>M</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Items</relationshipLabel>
        <relationshipName>Purchase_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Order Item</label>
    <nameField>
        <displayFormat>PO-Item-{0000000}</displayFormat>
        <label>Purchase Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>